new tasks for the reflection component
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@526 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/TODO.txt
+++ b/TODO.txt
@@ -75,6 +75,10 @@ libs/reflection
 (Falko)               - improve and fix XML Schema output
 		 REM  - unterstützt werden nur einfache arrays, bei den der index nicht relevant ist,
 		        Klassen und einfach datentypen, KEINE Maps (Key=>Value) Typen
+                      - rename DocTag classes into Annotiation
+                      - introduce a type mixed to represent mixed types or type expressions using the | to list multiple types
+                      - introduce a type numeric as a special mixed type for integer & float
+                      - change signatures to fit the original reflection api and avoid notices
 		        
 REST
 		DONE  - ser/deserialisieren der eingabedaten?
